--- a/pom.xml
+++ b/pom.xml
@@ -10,25 +10,10 @@
 
     <repositories>
         <repository>
-            <id>pa-snapshots</id>
-            <url>https://repo.extension.ws/content/repositories/snapshots</url>
-        </repository>
-        <repository>
-            <id>pa-releases</id>
-            <url>https://repo.extension.ws/content/repositories/releases</url>
+            <id>jitpack.io</id>
+            <url>https://jitpack.io</url>
         </repository>
     </repositories>
-
-    <distributionManagement>
-        <repository>
-            <id>pa-deployment</id>
-            <url>https://repo.extension.ws/content/repositories/releases</url>
-        </repository>
-        <snapshotRepository>
-            <id>pa-deployment</id>
-            <url>https://repo.extension.ws/content/repositories/snapshots</url>
-        </snapshotRepository>
-    </distributionManagement>
 
     <dependencies>
         <dependency>
@@ -55,9 +40,10 @@
             <scope>compile</scope>
         </dependency>
         <dependency>
-            <groupId>tc.oc</groupId>
+            <!-- Since BungeeCord also depends on this, use a cached snapshot -->
+            <groupId>com.github.OvercastNetwork.BungeeCord</groupId>
             <artifactId>bungeecord-chat</artifactId>
-            <version>1.11-SNAPSHOT</version>
+            <version>[1.0,)</version>
         </dependency>
 
         <!-- testing -->
@@ -68,9 +54,9 @@
             <scope>test</scope>
         </dependency>
         <dependency>
-            <groupId>tc.oc</groupId>
+            <groupId>com.github.OvercastNetwork</groupId>
             <artifactId>test-util</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <version>master-SNAPSHOT</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
